--- a/src/features/auth/passwordRecovery/ui/PasswordRecovery.module.scss
+++ b/src/features/auth/passwordRecovery/ui/PasswordRecovery.module.scss
@@ -1,12 +1,12 @@
 .PasswordRecoveryForm {
   padding: 23px 24px 30px 24px;
-  width: 378px;
+  width: 400px;
   display: flex;
   flex-direction: column;
 
   background-color: var(--dark-500);
   border: 1px solid var(--dark-300);
-  border-radius: 2px;
+  border-radius: 15px;
 }
 
 .alignSelfCenter {
@@ -58,4 +58,8 @@
  
 .mb29 {
   margin-bottom: 29px;
+}
+
+.recaptcha {
+  margin: 0 auto;
 }
