--- a/src/features/profile/profileSetting/generalInformation/ui/userProfileData/userProfileData.module.scss
+++ b/src/features/profile/profileSetting/generalInformation/ui/userProfileData/userProfileData.module.scss
@@ -20,16 +20,15 @@
   z-index: 15;
 }
 
-.button {
-  align-self: flex-end;
-  margin-top: 22px;
+.btn {
+  background-color: var(--danger-500);
+  color: var(--light-100);
+  text-transform: uppercase;
 }
 
-//.decor {
-//  position: absolute;
-//  left: 0;
-//  bottom: 60px;
-//  width: 100%;
-//  height: 1px;
-//  background-color: var(--dark-300);
-//}
+.buttonContainer {
+  margin-top: 22px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
