--- a/src/features/profile/userProfile/ui/UserProfileHeader/UserProfileHeader.module.scss
+++ b/src/features/profile/userProfile/ui/UserProfileHeader/UserProfileHeader.module.scss
@@ -4,8 +4,8 @@
 }
 
 .avatarContainer {
-  min-width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
