--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -1,12 +1,12 @@
 .Sidebar {
   position: sticky;
-  top: 61px;
-  height: calc(100vh - 61px);
-  width: 220px;
+  top: 0;
+  height: calc(100vh);
+  width: 270px;
   padding: 74px 0 36px 0;
 
   border-right: 1px solid var(--dark-300);
-  transition: all .5s ease-in-out;
+  transition: all .4s ease-in-out;
   z-index: 20;
 
   &.sidebarClose {
@@ -21,7 +21,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  //align-items: center;
   font: var(--font-medium-l);
 }
 
@@ -60,5 +60,14 @@
 .fontInherit {
   font: inherit;
 
+  transition: font-size .3s ease-in-out;
+}
+
+.mb50 {
+  margin-bottom: 50px;
+}
+
+.text {
+  align-self: center;
   transition: font-size .3s ease-in-out;
 }
