--- a/src/shared/ui/Card/Card.module.scss
+++ b/src/shared/ui/Card/Card.module.scss
@@ -2,9 +2,9 @@
   position: relative;
   width: 309px;
   height: 309px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  //display: flex;
+  //justify-content: center;
+  //align-items: center;
 
   &:hover {
     opacity: .8;
@@ -15,15 +15,9 @@
   overflow: hidden;
 }
 
-.container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
 
 .cardItem {
+  width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center;
-
 }
