--- a/src/modules/post/ui/Post.module.scss
+++ b/src/modules/post/ui/Post.module.scss
@@ -2,20 +2,20 @@
   display: flex;
   align-items: center;
 
-  width: 75vw;
-  height: 85vh;
+  width: 85vw;
+  height: 95vh;
 
   color: var(--light-100);
 
   opacity: 1;
   background-color: var(--dark-900);
-  border: 1px solid var(--dark-100);
+  border: 1px solid #504f4f6a;
 }
 
 .imageContainer {
   position: relative;
 
-  width: 40vw;
+  width: 50vw;
   height: 100%;
 }
 
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
 
-  width: 35vw;
+  width: 40vw;
   height: 100%;
 }
 
