--- a/src/modules/user/ui/UserAvatarSmall/UserAvatarSmall.module.scss
+++ b/src/modules/user/ui/UserAvatarSmall/UserAvatarSmall.module.scss
@@ -1,15 +1,22 @@
 .userInfo {
-    display: flex;
-    gap: 12px;
-    align-items: center;
-  }
-  
-  .avatarContainer {
-    overflow: hidden;
-  
-    width: 38px;
-    height: 38px;
-  
-    border-radius: 50%;
-  }
+  display: flex;
+  gap: 12px;
+  align-items: center;
 
+  word-break: break-word;
+}
+
+.avatarContainer {
+  overflow: hidden;
+
+  width: 38px;
+  min-width: 38px;
+  height: 38px;
+  min-height: 38px;
+
+  border-radius: 50%;
+}
+
+.title {
+  margin-right: 8px;
+}
