--- a/src/widgets/LangSwitcher/ui/LangSwitcher/LangSelect/LangSelect.module.scss
+++ b/src/widgets/LangSwitcher/ui/LangSwitcher/LangSelect/LangSelect.module.scss
@@ -49,7 +49,7 @@
   border: 1px solid var(--dark-100);
 }
 
-.listBoxOption {
+.listBoxOption {;
   cursor: pointer;
 
   display: flex;
@@ -60,6 +60,8 @@
   padding: 6px 12px;
 
   color: var(--light-100);
+
+  background-color: black;
 }
 
 .listBoxOptionActive {
