--- a/src/shared/ui/RadioButton/RadioButton.module.scss
+++ b/src/shared/ui/RadioButton/RadioButton.module.scss
@@ -1,10 +1,3 @@
-.formGroup {
-  cursor: pointer;
-
-  display: flex;
-  align-items: center;
-}
-
 .realRadio {
   position: absolute;
   z-index: -1;
@@ -14,6 +7,20 @@
 
   opacity: 0;
 }
+
+.formGroup {
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+}
+
+.disable {
+  cursor: default;
+
+  color: var(--dark-100);
+}
+
 
 .customRadio {
   position: relative;
@@ -48,5 +55,13 @@
     transform: translate(-50%, -50%) scale(1);
 
     display: inline-block
+  }
+
+  .realRadio:disabled + & {
+    border-color: var(--dark-100);
+  }
+
+  .realRadio:checked:disabled + &::before {
+    background-color: var(--dark-100);
   }
 }
