--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -25,7 +25,9 @@
   --success-700: #0F9954;
   --success-900: #0A6638;
 
-  --light-100: #FFFFFF;
+  --white: #fff;
+
+  --light-100: rgba(255, 255, 255, 0.7);
   --light-300: #F7FBFF;
   --light-500: #EDF3FA;
   --light-700: #D5DAE0;
