--- a/src/features/auth/logOut/ui/LogOutComponent.module.scss
+++ b/src/features/auth/logOut/ui/LogOutComponent.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
 
-  width: 400px;
+  width: max-content;
 
   background-color: var(--dark-500);
   border: 1px solid var(--dark-300);
