--- a/src/features/auth/registration/ui/RegistrationForm/RegistrationForm.module.scss
+++ b/src/features/auth/registration/ui/RegistrationForm/RegistrationForm.module.scss
@@ -15,8 +15,8 @@
   margin-bottom: 18px;
 }
 
-.mb12 {
-  margin-bottom: 12px;
+.mb18 {
+  margin-bottom: 18px;
 }
 
 .alignSelfCenterPure {
@@ -27,4 +27,21 @@
   align-self: center;
 
   margin-bottom: 14px;
+}
+
+.text_decoration {
+  text-decoration: underline;
+  text-decoration-color: var(--primary-500);
+}
+
+.policy {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.text {
+  display: flex;
+  gap: 3px;
+  align-items: center;
 }
