--- a/src/styles/dataPickerGlobal.scss
+++ b/src/styles/dataPickerGlobal.scss
@@ -152,11 +152,23 @@
   margin-top: 10px;
 }
 
-
 .react-datepicker__month-dropdown-container--select {
   font: var(--font-regular-l) !important;
   color: var(--light-100) !important;
 }
+
+.react-datepicker__year-select {
+.react-datepicker__month-dropdown-container--select {
+
+  font: var(--font-regular-l) !important;
+  color: var(--light-100) !important;
+}
+
+
+.react-datepicker__month-select,
+.react-datepicker__year-select
+{
+  background-color: var(--dark-500);
 
 .react-datepicker__year-select {
   font: var(--font-regular-l) !important;
@@ -164,5 +176,4 @@
 }
 
 .react-datepicker-ignore-onclickoutside {
-
 }
