refactor: fix validation general page

--- a/src/shared/ui/DatePicker/DatePicker.module.scss
+++ b/src/shared/ui/DatePicker/DatePicker.module.scss
@@ -93,6 +93,16 @@
   }
 }
 
+.errorText {
+  position: absolute;
+  top: 60px;
+}
+
 .disabled {
   opacity: .6;
+}
+
+.text_decoration  {
+  color: var(--danger-800);
+  text-decoration: underline;
 }
